--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@google/genai": "^1.34.0",
     "recharts": "^3.6.0",
     "react-hot-toast": "^2.6.0",
-    "xlsx": "0.18.5"
+    "xlsx": "0.18.5",
+    "firebase": "^12.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
